style.css
:root {
    --background-color: #FFFFFF;
    --form-background-color: #FFFFFF;

    --primary-color: #3e36d7;

    --text-primary-color: #1B2C39;
    --text-secondary-color: #5C656B;

    --button-hover-color: rgba(0, 0, 0, 0.50);
    --shadow-color: #212121;

    --color-black: #212121;
    --color-white: #FFFFFF;
    --color-red: #f53d5a;


}

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    margin: 0;
    background-color: var(--background-color, #FFF)
}

img {
    height: auto;
    max-width: 100%;
}

form {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

ul {
    font-family: "IBM Plex Sans", Arial;
    font-size: 2rem;
    width: 100%;
}

li {
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 4px solid var(--color-black);
    padding: 3.2rem;
    margin-bottom: 3.2rem;
    max-width: 40rem;
    width: 100%;
    box-shadow: 0px 0px 0px 0px #000;
    transition: box-shadow 0.2s ease;
}

li:hover {
    box-shadow: 6px 6px 0px 0px var(--shadow-color);
    transition: box-shadow 0.2s ease;
}

li:active {
    box-shadow: 0px 0px 0px 0px var(--shadow-color);
    transition: box-shadow 0.2s ease;
}

label {
    margin-right: 3.2rem;
}

input[type="checkbox"] {
    display: none;
}


.title {
    display: inline;
    font-size: 7.2rem;
    text-align: center;
    font-weight: 500;
    margin: 0 1.6rem 0 0;
}

.sub-title {
    display: inline;
    font-size: 3.6rem;
    font-weight: 700;
}

.heading-div {
    font-family: "IBM Plex Mono", Arial;
    color: var(--text-primary-color);
    border: 8px solid var(--color-black);
    padding: 3.2rem;
    text-align: center;
    max-width: 80vw;
    margin-bottom: 6.4rem;
}

.tasks-heading {
    font-family: "IBM Plex Serif", Arial;
    font-size: 3.6rem;
    margin-bottom: 3.2rem;
    text-transform: uppercase;
    text-align: center;
}

.todo-list {
    box-sizing: border-box;
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.delete-button {
    float: right;
    background-color: var(--color-white);
    transition: opacity 0.2s ease;
}

.delete-button:hover {
    opacity: 50%;
    transition: opacity 0.2s ease;
}

.todo-list-input {
    max-width: 80vw;
    padding: 1.6rem;
    background-color: #FFF;
    border: 8px solid var(--color-black);
    font-family: "IBM Plex Sans", Arial;
    font-size: 2rem;
    transition: border 0.2s ease;
    box-shadow: 0px 0px 0px 0px var(--shadow-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
    margin-bottom: 6.4rem;
}

.todo-list-input:hover {
    box-shadow: 6px 6px 0px 0px var(--shadow-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

.todo-list-input::placeholder {
    opacity: 1;
    color: var(--text-secondary-color);
}

.todo-list-input:focus {
    outline: none;
    border: 8px solid var(--primary-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

.add-button {
    width: 20rem;
    height: 7rem;
    font-family: "IBM Plex Sans", Arial;
    font-size: 2rem;
    font-weight: 600;
    border: 8px solid var(--color-black);
    background-color: var(--color-white);
    color: var(--color-black);
    box-shadow: 0px 0px 0px 0px var(--shadow-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

.add-button:focus {
    outline: none;
    border: 8px solid var(--primary-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

.add-button:hover {
    box-shadow: 6px 6px 0px 0px var(--shadow-color);
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

.add-button:active {
    box-shadow: none;
}

.show {
    display: flex;
    flex-direction: column;
}

.hide {
    display: none;
}

.error-border {
    border-bottom: 8px solid var(--color-red);
    transition: border 0.2s ease;
}

.fab {
    position: fixed;
    bottom: 0;
    right: 0;
    margin-right: 6.4rem;
    margin-bottom: 6.4rem;
    padding: 3.2rem;
    border: 4px solid var(--color-black);
    border-radius: 50%;
    width: 3rem;
    height: 3rem;
    background-color: var(--color-black);
    stroke: var(--color-white);
    box-shadow: 0px 0px 0px 0px #000;
    transition: box-shadow 0.2s ease, transform 0.2s ease,
                background-color 0.2s ease, stroke 0.2s ease;
}

.fab:hover {
    box-shadow: 6px 6px 0px 0px var(--shadow-color);
    background-color: var(--color-white);
    stroke: var(--color-black);
    transform: translate(0px, -8px);
    transition: box-shadow 0.2s ease, transform 0.2s ease,
                background-color 0.2s ease, stroke 0.2s ease;
}

.empty-state {
    font-family: "IBM Plex Sans", Arial;
    text-align: center;
    display: none;
}

.empty-state-title {
    font-size: 2rem;
    font-weight: 400;
    color: var(--text-primary-color);
    margin-bottom: 3.2rem;
    margin-top: 3.2rem;
}

.empty-state-desc {
    margin: 0;
    font-size: 1.8rem;
    color: var(--text-secondary-color);
}

.empty-state-icon {
    height: 10rem;
    width: 10rem;
    margin-bottom: 3.2rem;
}

.todo-list:empty {
    display: none;
}

.todo-list:empty + .empty-state {
    display: block;
}

.strong-text {
    color: var(--text-primary-color);
    font-weight: 600;
}

#main-div {
    display: grid;
    grid-template-rows: 1fr;
    justify-content: center;
    width: 90%;
    max-width: 150rem;
    margin: auto;
    margin-top: 6.4rem;
}

#todo-list-form {
    position: fixed;
    bottom: 0;
    right: 0;
    backdrop-filter: brightness(60%) blur(4px); /* Chrome etc. */
    -webkit-backdrop-filter: brightness(60%) blur(4px); /* Safari */
}

@media screen and (max-width: 900px) {
    .todo-list {
        font-size: 1.8rem;
    }

    .title {
        font-size: 5rem;
    }

    .sub-title {
        font-size: 3rem;
    }

    .tasks-heading {
        font-size: 3rem;
    }

    .todo-list-input {
        font-size: 1.8rem;
    }

    .empty-state-title {
        font-size: 1.8rem;
    }

    .empty-state-desc {
        font-size: 1.6rem;
    }

    .fab {
        width: 2rem;
        height: 2rem;
        margin-right: 3.2rem;
        margin-bottom: 3.2rem;
    }

    #main-div {
        margin-top: 3.2rem;
    }
}

@media screen and (max-width: 450px) {
    .title {
        font-size: 4rem;
    }

    .sub-title {
        font-size: 2.6rem;
    }
    
    .tasks-heading {
        font-size: 2.6rem;
        margin-bottom: 1.6rem;
    }

    .heading-div {
        margin-bottom: 3.2rem;
        padding: 1.6rem;
    }

    .todo-list-input:hover {
        box-shadow: none;
    }

    .fab {
        width: 1.5rem;
        height: 1.5rem;
    }

    .fab:hover {
        box-shadow: none;
        transform: none;
    }

    .add-button:hover {
        box-shadow: none;
    }

    li:hover {
        box-shadow: none;
    }

    .delete-button:hover {
        opacity: 1;
    }
}

